# SDL-Template

./: .gitignore  CMakeLists.txt
SDL2/: VERSION.txt
src/: main.cpp
